# reg01

./: .env  .gitignore  README.md  check_router.py  create_test_sessions.py  docker-compose.yml  ingest.py  install_requirements.py  pyproject.toml  requirements.txt  requirements_rag.txt  run.py  start.bat  tmp_legacy_admin.html  tmp_legacy_app_chat.js  tmp_legacy_app_core.js  tmp_legacy_app_database.js  tmp_legacy_app_files.js  tmp_legacy_app_logs.js  tmp_legacy_app_monitor.js  tmp_legacy_dev.html  tmp_legacy_index.html  tmp_routes.json  tts_original.tmp  tunnel.py  uninstall_all_library.py  uninstall_library.py
.github/workflows/: ci.yml  eval-gate.yml
app/: tts.py
app/cache/: file_hashes.txt
app/prompt/: prompt.py
backend/: .dockerignore  .env.bak  .env.example  Dockerfile  alembic.ini  main.py  migrate_db.py  pdf_to_txt.py
backend/alembic/: env.py
backend/app/: auth.py  config.py  stt.py  stt_stream.py  telemetry.py  tts.py  tts_multi.py
backend/core/: README.md  __init__.py  app_factory.py  facebook.py  schemas.py  settings.py
backend/database/: DATABASE_GUIDE.md  connection.py  database_init.py  models.py  reg01.db  session_manager.py
backend/dev/: benchmark_report_default_single.json  benchmark_report_latest.json  benchmark_report_low_cost.json  benchmark_runtime.py  debug_egrad_full.py  env_history.json  env_store.py  eval_compare_backup_report.json  eval_compare_backup_report_after_fix.json  eval_compare_backup_report_after_local_fallback.json  eval_compare_backup_report_after_local_fallback_v2.json  eval_compare_backup_report_after_local_fallback_v3.json  eval_compare_backup_report_after_purge.json  eval_multi_mode.py  eval_multi_mode_report_latest.json  flow_config.json  flow_config_history.json  flow_graph_model.json  flow_graph_model_history.json  flow_store.py  gold_set_data.json  local_access.py  migrate_faq_to_redis.py  migrate_sqlite_to_pg.py  self_test_non_facebook.py  test_chaos_realtime_timeout.py  test_debug_remaining.py  test_e2e_system.py  test_encoding.py  test_gold_set.py  test_queue.py  test_queue_persistence.py  test_realtime_e2e.py  test_realtime_load.py  test_remaining3.py  test_results.json  (+6 more)
frontend/: admin.html  dev.html  index.html  model.js
frontend-next/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
infra/: otel-collector.yml  prometheus.yml
install/: install_requirements.py  setup_auto.bat
legacy_system_b89339d/: install_requirements.py  requirements.txt  run.py
memory/: memory.py
tools/: eval_baseline.py  production_check.py
เอกสารโครงงาน/: แชทบอทอัจฉริยะสำหรับงานทะเบียนนักศึกษาระดับปริญญาตรีมหาวิทยาลัยเชียงใหม่.docx
(+196 files in other folders)
